# aruco_pose_detection

./: CMakeLists.txt  README.md  package.xml  run_sim.sh
include/aruco_pose_detection/: aruco_box_config.h  aruco_detection_manager.h
launch/: aruco_box_gazebo.launch
markers/combined_markers/: combined_marker_info.txt
markers/single_markers/: marker_info.txt
media/materials/scripts/: aruco.material
scripts/: generate_aruco.py  generate_combined_aruco.py
src/: aruco_detection_manager.cpp  main.cpp
urdf/: aruco_box_parametric.urdf.xacro  aruco_box_simple.urdf  camera_robot.urdf.xacro  obstacle_box.urdf.xacro
worlds/: aruco_box.world
